# Pentagon-Compressor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  update-ui-screenshot.yml
Source/: ParameterIds.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StageProcessors.h
Source/DSP/: Fet76Stage.h  Opto2AStage.h  StageChainManager.h  StageCommon.h  Tube670Stage.h  VariMuStage.h  Vca160Stage.h
Tests/: PentagonSmokeTests.cpp  PentagonUIScreenshot.cpp
docs/: implementation.md
reference/: specs.md  specs_long.md
